--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>BatisProFront</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
     box-sizing: border-box;
   }
   body{
-    background-color: #1A1A1D !important;
+    background-color: #0B0C10 !important;
     font-family: 'Lato', sans-serif !important;
 
   }
